cmake_minimum_required(VERSION 4.1.1)
set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "d0edc3af-4c50-42ea-a356-e2862fe7a444")
# cmake_minimum_required(VERSION 4.3.2)
# set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "451f2fe2-a8a2-47c3-bc32-94786d8fc91b")
set(CMAKE_CXX_MODULE_STD ON)

project(Xiangqi VERSION 0.1 LANGUAGES CXX)
set(QT_QML_GENERATE_QMLLS_INI ON)

find_package(Qt6 REQUIRED COMPONENTS Quick)
qt_standard_project_setup(REQUIRES 6.11)

qt_add_executable(appXiangqi
    main.cpp

    core/Constants.h
    core/Piece.h
    core/MoveResult.h
    core/ChessBoard.h
    core/ChessBoard.cpp
    core/RuleEngine.h
    core/RuleEngine.cpp

    controller/README.md
    network/README.md
    docs/interface.md
)
qt_add_qml_module(appXiangqi
    URI Xiangqi
    VERSION 1.0
    QML_FILES
            qml/Main.qml

)
target_compile_features(appXiangqi PRIVATE cxx_std_23)
target_link_libraries(appXiangqi
    PRIVATE Qt6::Quick
)

set(CMAKE_INSTALL_PREFIX "/opt/${PROJECT_NAME}" CACHE PATH "Install path prefix" FORCE)
install(TARGETS appXiangqi
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

# C++ Modules support
set(XIANGQI_MODULE_FILES
    # math.cppm                             # 模块文件
)
source_group("Xiangqi" FILES ${XIANGQI_MODULE_FILES})
target_sources(appXiangqi
    PRIVATE FILE_SET cxx_modules TYPE CXX_MODULES
        BASE_DIRS   ${CMAKE_CURRENT_SOURCE_DIR}
        FILES  ${XIANGQI_MODULE_FILES}
)
